IngressController/VoyagerUse/06ingressb.yaml
apiVersion: voyager.appscode.com/v1beta1
kind: Ingress
metadata:
  name: example-ingress
  namespace: default
  annotations:
   ingress.appscode.com/annotations-service: |
       {
         "external-dns.alpha.kubernetes.io/hostname" : "example-demo.ramzom.org"
       }
spec:
  tls:
  - secretName: tls-ramzom
    hosts:
    - example-demo.ramzom.org
  rules:
  - host: example-demo.ramzom.org
    http:
      paths:
      - backend:
          serviceName: example
          servicePort: 80
